--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+---
+layout: titlePage
+title: John Hopkins: Software Developer Portfolio
+---
+
 <!DOCTYPE html>
 <html>
 <body>
-<h1>John Hopkins </n> Software Developer Portfolio</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>John Hopkins: Software Developer Portfolio</h1>
+<p>Under Construction.</p>
 </body>
 </html>
