--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
----
-layout: post
-title: John Hopkins: Software Developer Portfolio
----
-
 <!DOCTYPE html>
 <html>
 <body>
-<h1>John Hopkins: Software Developer Portfolio</h1>
+<h1>John Hopkins
+  Software Dev Portfolio</h1>
 <p>Under Construction.</p>
 </body>
 </html>
